0.8.06
  Added Dark Iron Ore:
    Found around Y=4; watch for changes in the bedrock
    Wrath fire can no longer be created; the igniter will hang around for crafting wrath lamps
    Can be ore-processed in the usual manner
  Servos:
    Break themselves when not on a rail
    Added the Item Shifter Control instruction; it may pop an integer from the argument stack
  Fixed middle click


0.8.05
  Localizations:
    German localizations by Vexatos!
    Spanish localizations by Darkona!
    Chinese localizations by crafteverywhere!
    Thanks!
    https://github.com/purpleposeidon/FactorizationLocalizations if you would like to contribute localizations
  Commands:
    Made the /f command user-friendly. Use it!
    Added the /mutter command; write messages above your head!
  Barrels:
    Changed the silky barrel recipe from 1 silk touch book to 8 cobwebs, and they must be broken with a Silk Touch axe
    Hopping barrels respect redstone signal.
    Hopefully made barrel placing more intuitive. It will always place upwards unless:
      Clicked close to the edge of a horizontal face
      Clicked against a vertical face while looking straight up/down.
    Can now store damaged items
    Items with NBT tag 'noFzBarrel' can't be put into barrels by clicking

  Parasieve:
    Now cheaper
    Filter can be inverted with a redstone signal
  Compression Crafter:
    BUG: Broken on servers; waiting for https://github.com/MinecraftForge/MinecraftForge/pull/781 to fix
    now requires an adjacent inventory to store crafting results, instead of dumping everything on the ground
    improved self-documentation (and hopefully not annoying. >_>)
    items that have durability, such as wrath igniters, will be re-used as much as the other crafting materials permit
    crafts up to max 32 items at once instead of 16
  Sockets:
    These are blocks that you shove specialized tools into
    The Lacerator:
      Combination mob/player grinder, (ore) Grinder, and block breaker